--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Marc's Basic Portfolio</title>
+	<!-- <link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/"> -->
 	<!--link rel="stylesheet" type="text/css" href="assets/css/style.css" -->
 </head>
 
