--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<h1>Marc DeRoberts</h1>
 
-		<!-- Navigation for About Portfolio Contact -->
+		<!-- Navigation // About Portfolio Contact -->
 		<nav>
 		</nav>
 	</header>
