portfolio html, page titles

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Marc's Basic Portfolio</title>
+	<title>Contact Marc</title>
 	<!-- <link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/"> -->
 	<!--link rel="stylesheet" type="text/css" href="assets/css/style.css" -->
 </head>
