--- a/portfolio.html
+++ b/portfolio.html
@@ -18,16 +18,12 @@
 		</nav>
 	</header>
 
-	<!-- About container // Needs class -->
+	<!-- Portfolio container // Needs class -->
 	<section>
-		<h2>About Me</h2>
+		<h2>Portfolio</h2>
 
-		<!-- Image needs to be resized and styled <img src="assets/images/marc-deroberts.JPG"> -->
+		<!-- Images with labels need to be coded and added. -->
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In velit ante, blandit a sem vitae, accumsan auctor lacus. Donec consectetur dui at ante viverra commodo. Maecenas maximus a nulla eu ornare. Aliquam quis lacinia ipsum. Aliquam aliquam, orci eu convallis imperdiet, ipsum mi efficitur dolor, at condimentum dui nibh eget neque. </p>
-
-		<p>Praesent et turpis porta, efficitur ante in, tempor metus. Vestibulum sit amet risus sit amet risus tempus cursus. Proin aliquet commodo dictum. Integer vel dui id turpis elementum dapibus non at felis. Mauris pretium bibendum lectus, et maximus mauris imperdiet eu. Ut mauris dolor, molestie sit amet pharetra eu, mattis eu mi. Donec eu velit elementum, laoreet massa et, mollis velit. Nullam egestas, diam et condimentum pulvinar, magna nisl porttitor sem, eu consectetur lectus erat non erat. Aliquam nibh arcu, mollis sed risus et, molestie aliquet dui. Suspendisse a ex nec dui lacinia gravida.
-		</p>
 	</section>
 
 	<!-- Box with social links -->
