--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Marc's Basic Portfolio - Home</title>
-		<link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/">
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
 	<header>
+		<div class="header-box">
 		<h1>Marc DeRoberts</h1>
+		</div>
 
 		<!-- Navigation // About Portfolio Contact -->
 		<nav>
