--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</section>
 
 	<!-- Lock footer at bottom -->
-	<footer>
+	<footer class="footer">
 		© Copyright 2017 Marc DeRoberts
 	</footer>
 
