--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<section class="header-box">
 		<section class="name-box">
-		<h1>Marc DeRoberts</h1>
+			<h1>Marc DeRoberts</h1>
 		</section>
 
 		<!-- Navigation // About Portfolio Contact -->
@@ -35,15 +35,15 @@
 				<p>Praesent et turpis porta, efficitur ante in, tempor metus. Vestibulum sit amet risus sit amet risus tempus cursus. Proin aliquet commodo dictum. Integer vel dui id turpis elementum dapibus non at felis. Mauris pretium bibendum lectus, et maximus mauris imperdiet eu. Ut mauris dolor, molestie sit amet pharetra eu.</p>
 		</section>
 
-	<section>
-		<div class="sidebar">
-			<h3>Connect with Me</h3>
-		</div>
-	</section>
+		<section>
+			<div class="sidebar">
+				<h3>Connect with Me</h3>
+			</div>
+		</section>
 
-	<!-- Lock footer at bottom -->
-	<footer class="footer">
-		© Copyright 2017 Marc DeRoberts
+
+	<footer>
+		<p>© Copyright 2017 Marc DeRoberts</p>
 	</footer>
 
 	</div>
