--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
 
 	<footer>
-		<p>© Copyright 2017 Marc DeRoberts</p>
+		<section class="footer-container">
+			<p>© Copyright 2017 Marc DeRoberts</p>
+		</section>
 	</footer>
 
 	</div>
