--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 
 	<header>
 		<section class="header-box">
-		<section class="name-box">
-			<h1>Marc DeRoberts</h1>
-		</section>
+			<section class="name-box">
+				<h1>Marc DeRoberts</h1>
+			</section>
 
 		<!-- Navigation // About Portfolio Contact -->
 		<nav>
+			<section class="nav-box">
+				<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
+			</section>
 		</nav>
 		</section>
 	</header>
