--- a/index.html
+++ b/index.html
@@ -9,24 +9,28 @@
 </head>
 
 <body>
-
+	
+	<!-- Header // Name box -->
 	<header>
 		<section class="header-box">
 			<section class="name-box">
 				<h1>Marc DeRoberts</h1>
 			</section>
 
-		<!-- Navigation // About Portfolio Contact -->
-		<nav>
-			<section class="nav-box">
-				<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
-			</section>
-		</nav>
+			<!-- Navigation links // About Portfolio Contact -->
+			<nav>
+				<section class="nav-box">
+					<section class="nav-links">
+						<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
+					</section>
+				</section>
+			</nav>
 		</section>
 	</header>
 
 	<div class="container">
 			
+		<!-- Photo and bio -->	
 		<section class="main-content">
 
 			<h2>About Me</h2>
@@ -38,13 +42,14 @@
 				<p>Praesent et turpis porta, efficitur ante in, tempor metus. Vestibulum sit amet risus sit amet risus tempus cursus. Proin aliquet commodo dictum. Integer vel dui id turpis elementum dapibus non at felis. Mauris pretium bibendum lectus, et maximus mauris imperdiet eu. Ut mauris dolor, molestie sit amet pharetra eu.</p>
 		</section>
 
+		<!-- Sidebar -->
 		<section>
 			<div class="sidebar">
 				<h3>Connect with Me</h3>
 			</div>
 		</section>
 
-
+	<!-- Footer -->
 	<footer>
 		<section class="footer-container">
 			<p>© Copyright 2017 Marc DeRoberts</p>
