nav links color fix and format

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<!-- Navigation links // About Portfolio Contact -->
 			<nav>
 				<section class="nav-box">
-					<section class="nav-links">
+					<!-- <section class="nav-links"> -->
 						<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
 					</section>
 				</section>
