--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			<!-- Navigation links // About Portfolio Contact -->
 			<nav>
 				<section class="nav-box">
-					<!-- <section class="nav-links"> -->
-						<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
+					<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
 					</section>
 				</section>
 			</nav>
@@ -46,6 +45,11 @@
 		<section>
 			<div class="sidebar">
 				<h3>Connect with Me</h3>
+					<div>
+						<a class="social-icons" href="#"><img src="assets/images/github_square_black.png" alt="Github profile">
+						<a class="social-icons" href="#"><img src="assets/images/linkedin_square_color.png" alt="LinkedIn profile">
+						<a class="social-icons" href="#"><img src="assets/images/overflow_square.png" alt="Stack Overflow profile">
+					</div>
 			</div>
 		</section>
 
