social icon style applied

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 			<div class="sidebar">
 				<h3>Connect with Me</h3>
 					<div>
-						<a class="social-icons" href="#"><img src="assets/images/github_square_black.png" alt="Github profile">
-						<a class="social-icons" href="#"><img src="assets/images/linkedin_square_color.png" alt="LinkedIn profile">
-						<a class="social-icons" href="#"><img src="assets/images/overflow_square.png" alt="Stack Overflow profile">
+						<a class="social-icon" href="#"><img class="social-icon" src="assets/images/github_square_black.png" alt="Github profile">
+						<a href="#"><img class="social-icon" src="assets/images/linkedin_square_color.png" alt="LinkedIn profile">
+						<a href="#"><img class="social-icon" src="assets/images/overflow_square.png" alt="Stack Overflow profile">
 					</div>
 			</div>
 		</section>
