social buttons set

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 			<div class="sidebar">
 				<h3>Connect with Me</h3>
 					<div>
-						<a class="social-icon" href="#"><img class="social-icon" src="assets/images/github_square_black.png" alt="Github profile">
-						<a href="#"><img class="social-icon" src="assets/images/linkedin_square_color.png" alt="LinkedIn profile">
-						<a href="#"><img class="social-icon" src="assets/images/overflow_square.png" alt="Stack Overflow profile">
+						<a href="#"><img class="social-icon" src="assets/images/icon-github.png" alt="Github profile"></a>
+						<a href="#"><img class="social-icon" src="assets/images/icon-linkedin.png" alt="LinkedIn profile"></a>
+						<a href="#"><img class="social-icon" src="assets/images/icon-stackoverflow.png" alt="Stack Overflow profile"></a>
 					</div>
 			</div>
 		</section>
