--- a/index.html
+++ b/index.html
@@ -13,43 +13,44 @@
 	<!-- Header // Name box -->
 	<header>
 		<section class="header-box">
-			<section class="name-box">
+			<div class="name-box">
 				<h1>Marc DeRoberts</h1>
-			</section>
-
+			</div>
 			<!-- Navigation links // About Portfolio Contact -->
 			<nav>
 				<section class="nav-box">
 					<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
-					</section>
 				</section>
 			</nav>
 		</section>
 	</header>
 
 	<div class="container">
-			
+	
 		<!-- Photo and bio -->	
 		<section class="main-content">
-
 			<h2>About Me</h2>
+				<div class="header-line">
+				</div>
 
-				<img id="profile-photo" src="assets/images/marc-deroberts.png" alt="Profile photo" height="200" width="150">
+			<img id="profile-photo" src="assets/images/marc-deroberts.png" alt="Profile photo" height="200" width="150">
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In velit ante, blandit a sem vitae, accumsan auctor lacus. Donec consectetur dui at ante viverra commodo. Maecenas maximus a nulla eu ornare. Aliquam quis lacinia ipsum. Aliquam aliquam, orci eu convallis imperdiet, ipsum mi efficitur dolor, at condimentum dui nibh eget neque. </p><br>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In velit ante, blandit a sem vitae, accumsan auctor lacus. Donec consectetur dui at ante viverra commodo. Maecenas maximus a nulla eu ornare. Aliquam quis lacinia ipsum. Aliquam aliquam, orci eu convallis imperdiet, ipsum mi efficitur dolor, at condimentum dui nibh eget neque. </p><br>
 
-				<p>Praesent et turpis porta, efficitur ante in, tempor metus. Vestibulum sit amet risus sit amet risus tempus cursus. Proin aliquet commodo dictum. Integer vel dui id turpis elementum dapibus non at felis. Mauris pretium bibendum lectus, et maximus mauris imperdiet eu. Ut mauris dolor, molestie sit amet pharetra eu.</p>
+			<p>Praesent et turpis porta, efficitur ante in, tempor metus. Vestibulum sit amet risus sit amet risus tempus cursus. Proin aliquet commodo dictum. Integer vel dui id turpis elementum dapibus non at felis. Mauris pretium bibendum lectus, et maximus mauris imperdiet eu. Ut mauris dolor, molestie sit amet pharetra eu.</p>
 		</section>
 
 		<!-- Sidebar -->
 		<section>
 			<div class="sidebar">
 				<h3>Connect with Me</h3>
-					<div>
-						<a href="#"><img class="social-icon" src="assets/images/icon-github.png" alt="Github profile"></a>
-						<a href="#"><img class="social-icon" src="assets/images/icon-linkedin.png" alt="LinkedIn profile"></a>
-						<a href="#"><img class="social-icon" src="assets/images/icon-stackoverflow.png" alt="Stack Overflow profile"></a>
+					<div class="header-line">
 					</div>
+				<div>
+					<a href="#"><img class="social-icon" src="assets/images/icon-github.png" alt="Github profile"></a>
+					<a href="#"><img class="social-icon" src="assets/images/icon-linkedin.png" alt="LinkedIn profile"></a>
+					<a href="#"><img class="social-icon" src="assets/images/icon-stackoverflow.png" alt="Stack Overflow profile"></a>
+				</div>
 			</div>
 		</section>
 
