about complete, style solved

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 			<!-- Navigation links // About Portfolio Contact -->
 			<nav>
 				<section class="nav-box">
-					<a class="link" href="#">About</a> <a class="link" href="#">Portfolio</a> <a class="link" href="#">Contact</a>
+					<a class="link" href="#">About</a> | 
+					<a class="link" href="#">Portfolio</a> | 
+					<a class="link" href="#">Contact</a>
 				</section>
 			</nav>
 		</section>
