--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="heading-box">
 				<h2>About Me</h2>
 			</div>
-			<div class="heading-line">
+			<div class="heading-line-h2">
 			</div>
 			<img id="profile-photo" src="assets/images/marc-deroberts.png" alt="Profile photo" height="200" width="150">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In velit ante, blandit a sem vitae, accumsan auctor lacus. Donec consectetur dui at ante viverra commodo. Maecenas maximus a nulla eu ornare. Aliquam quis lacinia ipsum. Aliquam aliquam, orci eu convallis imperdiet, ipsum mi efficitur dolor, at condimentum dui nibh eget neque. </p><br>
@@ -47,7 +47,7 @@
 				<div class="heading-box">
 					<h3>Connect with Me</h3>
 				</div>
-				<div class="heading-line">
+				<div class="heading-line-h3">
 				</div>
 				<div class="social-box">
 					<a href="#"><img class="social-icon" src="assets/images/icon-github.png" alt="Github profile"></a>
