functioning links, css on all pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,40 +3,72 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Marc's Basic Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="http://meyerweb.com/eric/tools/css/reset/">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>Marc's Basic Portfolio - Home</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-
+	
+	<!-- Header // Name box -->
 	<header>
-		<h1>Marc DeRoberts</h1>
-
-		<!-- Navigation // About Portfolio Contact -->
-		<nav>
-		</nav>
+		<section class="header-box">
+			<div class="name-box">
+				<h1>Marc DeRoberts</h1>
+			</div>
+			<!-- Navigation links // About Portfolio Contact -->
+			<nav>
+				<section class="nav-box">
+					<a class="link" href="index.html">About</a> | 
+					<a class="link" href="portfolio.html">Portfolio</a> | 
+					<a class="link" href="contact.html">Contact</a>
+				</section>
+			</nav>
+		</section>
 	</header>
+	<div class="header-line">
+	</div>
+
+	<div class="container">
 
 	<!-- Portfolio container // Needs class -->
-	<section>
-		<h2>Portfolio</h2>
+	<section class="main-content">
+		<div class="heading-box">
+			<h2>Portfolio</h2>
+		</div>
+		<div class="heading-line-h2">
+		</div>
+		
+
 
 		<!-- Images with labels need to be coded and added. -->
 
 	</section>
 
-	<!-- Box with social links -->
-	<section>
-		<h3>Connect with Me</h3>
-	</section>
+	<!-- Sidebar -->
+		<section>
+			<div class="sidebar">
+				<div class="heading-box">
+					<h3>Connect with Me</h3>
+				</div>
+				<div class="heading-line-h3">
+				</div>
+				<div class="social-box">
+					<a href="#"><img class="social-icon" src="assets/images/icon-github.png" alt="Github profile"></a>
+					<a href="#"><img class="social-icon" src="assets/images/icon-linkedin.png" alt="LinkedIn profile"></a>
+					<a href="#"><img class="social-icon" src="assets/images/icon-stackoverflow.png" alt="Stack Overflow profile"></a>
+				</div>
+			</div>
+		</section>
 
-	<!-- Lock footer at bottom -->
+	<!-- Footer -->
 	<footer>
-		© Copyright 2017 Marc DeRoberts
+		<section class="footer-container">
+			<p>© Copyright 2017 Marc DeRoberts</p>
+		</section>
 	</footer>
 
-
+	</div>
 </body>
 </html>
 
