--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<!-- Navigation links // About Portfolio Contact -->
 			<nav>
 				<section class="nav-box">
-					<a class="link" href="#">About</a> | 
-					<a class="link" href="#">Portfolio</a> | 
-					<a class="link" href="#">Contact</a>
+					<a class="link" href="index.html">About</a> | 
+					<a class="link" href="portfolio.html">Portfolio</a> | 
+					<a class="link" href="contact.html">Contact</a>
 				</section>
 			</nav>
 		</section>
@@ -58,6 +58,7 @@
 				</div>
 			</div>
 		</section>
+	</div>
 
 	<!-- Footer -->
 	<footer>
@@ -66,7 +67,6 @@
 		</section>
 	</footer>
 
-	</div>
 </body>
 </html>
 
